@@ -1,9 +1,10 @@
 TODO list for busybox in no particular order
 
-* Add in a mini syslogd
+If you have any good ideas, please let me know.
+
 * Allow tar to create archives with sockets, devices, and other special files
 * Add in a mini modprobe, insmod, rmmod
 * poweroff
 * Change init so halt, reboot (and poweroff) work with an initrd
     when init is not PID 1
-* 
+*   
